Closed Bug 484196 Opened 15 years ago Closed 15 years ago

TM: broken softfloat due to missing iu2fArg call

Categories

(Core :: JavaScript Engine, defect)

ARM
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Unassigned)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

Attached patch fix softfloatSplinter Review
Simple patch; something was grabbing the arg of LIR_i2f directly instead of calling iu2fArg(), so it was grabbing a bogus LIR_i2f from a LIR_qjoin op (that isi2f detected).
Attachment #368262 - Flags: review?(gal)
Comment on attachment 368262 [details] [diff] [review]
fix softfloat

On a related note, iu2fArg is the worst method name in the history of time.
Attachment #368262 - Flags: review?(gal) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: