b=484196; fix softfloat due to missing iu2fArg call; r=gal